--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
@@ -1,4 +1,4 @@
-<form name="issueForm" class="form-horizontal">
+<form name="issueAddForm" class="form-horizontal">
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <h2>Add New Issue</h2>
@@ -35,7 +35,7 @@
         <label for="issueKey" class="control-label col-md-3">Due Date</label>
         <div class="col-md-6">
             <input type="datetime" id="issueKey" class="form-control" ng-model="issueData.DueDate"
-                   placeholder="yyyy/mm/dd">
+                   placeholder="yyyy/mm/dd" ng-pattern="dateValidation" required="required">
         </div>
     </div>
     <div class="form-group">
@@ -57,31 +57,30 @@
         <div class="col-md-offset-3 col-md-6" ng-show="issueData.Labels.length > 0">
             <span>
                 <span ng-repeat="project in projects">
-                <span ng-if="$last">
-                    <span ng-repeat="label in project.Labels | filter:issueData.Labels">
-                        <span>{{label.Name}}{{$last ? '': ', '}}</span>
+                    <span ng-if="$last">
+                        <span ng-repeat="label in project.Labels | filter:issueData.Labels">
+                            <span>{{label.Name}}{{$last ? '': ', '}}</span>
+                        </span>
                     </span>
-                </span>
-                <span ng-if="!$last">
-                    <span ng-repeat="label in project.Labels | filter:issueData.Labels">
-                        <span>{{label.Name}}, </span>
+                    <span ng-if="!$last">
+                        <span ng-repeat="label in project.Labels | filter:issueData.Labels">
+                            <span>{{label.Name}}, </span>
+                        </span>
                     </span>
                 </span>
             </span>
-            </span>
-
         </div>
     </div>
     <div class="form-group">
         <label for="description" class="control-label col-md-3">Description</label>
         <div class="col-md-6">
-            <textarea id="description" class="col-md-6 form-control" placeholder="Description"
-                      required="required"></textarea>
+            <textarea id="description" ng-model="issueData.Description" class="col-md-6 form-control" required="required"
+            placeholder="Description"></textarea>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-3 col-md-9">
-            <button class="btn btn-primary" ng-click="addIssue(issueData)" ng-disabled="issueForm.$invalid">Add Issue
+            <button class="btn btn-primary" ng-click="addIssue(issueData)" ng-disabled="issueAddForm.$invalid">Add Issue
             </button>
         </div>
     </div>
