--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit.html
@@ -1,1 +1,45 @@
-<h2>Edit Project</h2>
+<form name="editProjectForm" class="form-horizontal">
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-9">
+            <h2>Edit Project</h2>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="name" class="control-label col-md-3">Name</label>
+        <div class="col-md-6">
+            <input type="text" id="name" ng-model="project.Name" class="form-control" required="required">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="description" class="control-label col-md-3">Description</label>
+        <div class="col-md-6">
+            <textarea id="description" ng-model="project.Description"
+                      class="form-control" required="required">{{project.Description}}</textarea>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="leadId" class="control-label col-md-3">Lead ID</label>
+        <div class="col-md-6">
+            <input type="text" id="leadId" ng-model="project.Lead.Id" class="form-control" required="required">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="labels" class="control-label col-md-3">Labels</label>
+        <div class="col-md-6">
+            <input type="text" id="labels" ng-model="labels" class="form-control" required="required">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="priority" class="control-label col-md-3">Priorities</label>
+        <div class="col-md-6">
+            <input type="text" id="priority" ng-model="priorities" class="form-control" required="required">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-9 col-md-offset-3">
+            <button class="btn btn-primary" ng-disabled="editProjectForm.$invalid"
+                    ng-click="editProject(project, labels, priorities)">Edit
+            </button>
+        </div>
+    </div>
+</form>
